--- a/style.css
+++ b/style.css
@@ -31,12 +31,13 @@ body {
     color: #000000; /* black */
     cursor: pointer;
     padding: 40px 80px;
-    border: solid 1px #61210fff; /* dark-walnut */
+    border: none; /* dark-walnut */
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 /*
